--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body class="main">
     <h1 class="text">Obrigado pelo contato</h1>
     <p class="paragrafo">Em breve responderemos sua dúvida!</p>
-    <a href="http://127.0.0.1:5500/PetAdote/index.html" class="bnt">Voltar</a>
+    <a href="https://doyudy.github.io/PetAdote" class="bnt">Voltar</a>
 </body>
+
 </html>
